Prueba43B/errfile432Bden15REP.txt

CommandNotFoundError: Your shell has not been properly configured to use 'conda activate'.
To initialize your shell, run

    $ conda init <SHELL_NAME>

Currently supported shells are:
  - bash
  - fish
  - tcsh
  - xonsh
  - zsh
  - powershell

See 'conda init --help' for more information and options.

IMPORTANT: You may need to close and restart your shell after running 'conda init'.


  File "/home/thomas.batard/SeminarioTesis2/Prueba43B/Cluster_Prueba43_DIP_2B_den15_10K.py", line 29
    listaRep = [6,12,13,15,18,,24]
                              ^
SyntaxError: invalid syntax
